Fixed scrollbar

--- a/front-dex/src/app/pages/home/home.component.scss
+++ b/front-dex/src/app/pages/home/home.component.scss
@@ -1,7 +1,6 @@
 @import '../../../assets/scss/main.scss';
 
 .toolbar {
-    width: 100%;
     padding: 20px 20px 3px 42px;
     display: flex;
     flex-direction: row;
